<resources>
    <string name="app_name">Memoria v3</string>
    <string name="hello">Hello..</string>
    <string name="user">User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categories">Categories</string>
    <string name="main_category">Main category</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="what_is_your_name">What is your name?</string>
    <string name="password">Password</string>
    <string name="just_so_we_know_what_to_call_you">Just so we know what to call you</string>
    <string name="name_settings">Name Settings</string>
    <string name="password_settings">Password Settings</string>
    <string name="some_categories_can_be_secured_with_this_password">Some categories can be secured with this password</string>
    <string name="if_you_forget_your_password_you_can_retrieve_it_using_this_word">If you forget your password, you can retrieve it using this answer</string>
    <string name="what_is_your_favorite_animal">what is your favorite animal?</string>
    <string name="save">Save</string>
    <string name="forgot_password">Forgot password</string>
    <string name="preference_arch_key">com.bacchoterra.memoriav3.PREFERENCE_PASSWORD_KEY</string>
    <string name="saved_user_name_key">saved_user_name_key</string>
    <string name="saved_password_key">saved_password_key</string>
    <string name="saved_fav_animal_key">saved_fav_animal_key</string>
    <string name="data_saved">Data updated</string>
    <string name="how_should_we_call_you">How should we call you?</string>
    <string name="insert_your_security_word_to_change_your_password">Insert your security word to change your password</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New password</string>
    <string name="password_change">Password change</string>
    <string name="save_changes">Save changes</string>
    <string name="wrong_security_word">Wrong security word</string>
    <string name="password_change_successful">Password changed</string>
    <string name="settings_updated">Settings updated</string>
    <string name="name_updated">Name updated</string>
    <string name="min_4_chars">Minimum of 4 chars</string>
    <string name="create_new">Create new</string>
    <string name="category_title">Category title</string>
    <string name="lock_this_category">Lock this category</string>
    <string name="no_last_note_body">Category is empty</string>
    <string name="delete">Delete</string>
    <string name="set_as_favorite">Set as favorite</string>
    <string name="category_key">cat_key</string>
    <string name="title_optional">Title (Optional)</string>
    <string name="importance">Importance:</string>
    <string name="note_body">Note body</string>
    <string name="note_key">note_key</string>
    <string name="image_key">image_key</string>
    <string name="image">Image:</string>
    <string name="delete_item">Delete item</string>
    <string name="permanent_action">This is a permanent action</string>
    <string name="access">Access</string>
    <string name="wrong_password">Wrong password</string>
    <string name="change_name">Change name</string>
    <string name="delete_category">Delete category</string>
    <string name="cancel">Cancel</string>
</resources>