<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlueBackground"
    android:padding="8dp">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/password_change"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/textColorOnLightBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/btm_linearLayoutAnimal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/btm_inputFavAnimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/btm_editFavAnimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/what_is_your_favorite_animal" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/btm_txtEditFavAnimalHelper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/insert_your_security_word_to_change_your_password"
            app:layout_constraintStart_toStartOf="@+id/btm_inputFavAnimal"
            app:layout_constraintTop_toBottomOf="@+id/btm_inputFavAnimal" />

        <Button
            android:id="@+id/btm_btnChangePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/change_password"
            app:layout_constraintStart_toStartOf="@+id/btm_inputFavAnimal"
            app:layout_constraintTop_toBottomOf="@+id/btm_txtEditFavAnimalHelper" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="16dp"
        android:id="@+id/btm_linearLayoutPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/btm_inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@+id/btm_inputFavAnimal"
            app:layout_constraintStart_toStartOf="@+id/btm_inputFavAnimal"
            app:layout_constraintTop_toBottomOf="@+id/btm_btnChangePassword"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/btm_editNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:inputType="numberPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btm_btnSaveNewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/save_changes" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>