<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/lightBlueBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputCategoryTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editCategoryTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/category_title"
            android:textColor="@color/textColorOnLightBackground"
            android:textColorHint="@color/textColorOnLightBackground" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchIsLocked"
        app:switchPadding="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/textColorOnLightBackground"
        android:text="@string/lock_this_category"
        app:layout_constraintStart_toStartOf="@+id/inputCategoryTitle"
        app:layout_constraintTop_toBottomOf="@+id/inputCategoryTitle" />

    <Button
        android:id="@+id/btnSaveCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/save"
        android:textColor="@color/textColorOnDarkBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/inputCategoryTitle"
        app:layout_constraintStart_toStartOf="@+id/inputCategoryTitle"
        app:layout_constraintTop_toBottomOf="@+id/switchIsLocked" />
</androidx.constraintlayout.widget.ConstraintLayout>