<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlueBackground"
    tools:context=".view.AddNoteActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/activity_add_note_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/lightBlueBackground" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/activity_add_note_txtDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:text="feb,4,2021"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/shape_add_note_background"
        android:minHeight="298dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_add_note_txtDate">

        <EditText
            android:id="@+id/activity_add_note_editNoteTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:hint="@string/title_optional"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/activity_add_note_editNoteBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:hint="@string/note_body"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp" />


    </LinearLayout>

    <SeekBar
        android:id="@+id/activity_add_note_seekBarImportance"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:max="2"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <ImageView
        android:id="@+id/activity_add_note_imageGallery"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginTop="24dp"
        android:padding="4dp"
        app:layout_constraintStart_toStartOf="@+id/activity_add_note_seekBarImportance"
        app:layout_constraintTop_toBottomOf="@+id/activity_add_note_seekBarImportance"
        app:srcCompat="@drawable/ic_baseline_image_24" />

    <ImageView
        android:id="@+id/activity_add_note_imageCamera"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/activity_add_note_imageGallery"
        app:layout_constraintStart_toEndOf="@+id/activity_add_note_imageGallery"
        app:layout_constraintTop_toTopOf="@+id/activity_add_note_imageGallery"
        app:srcCompat="@drawable/ic_baseline_add_a_photo_24" />

    <Button
        android:id="@+id/activity_add_note_btnSaveNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/activity_add_note_imageCamera"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/importance"
        android:textColor="@color/textColorOnLightBackground"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>